--- a/package.json
+++ b/package.json
@@ -19,16 +19,25 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "file-saver": "^2.0.5",
+    "html-to-pdfmake": "^2.1.5",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^1.5.3",
+    "pdfmake": "^0.1.70",
+    "pdfmake-wrapper": "^2.1.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.15.5",
     "tslib": "^2.0.0",
+    "xlsx": "^0.16.9",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@types/html2canvas": "0.0.36",
     "@types/jasmine": "~3.6.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
